[metadata]
description-file=README.rst

[yapf]
based_on_style=facebook
COLUMN_LIMIT=140
SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET=False
SPLIT_PENALTY_AFTER_OPENING_BRACKET=0

[nosetests]
verbosity=2
where=test
processes=-1

[check-manifest]
ignore =
    run-unit-tests.sh
	pre-commit.sh
	test
	test/*
	ci
	ci/*
	.travis.yml
	appveyor.yml
	*.pyc
	__pycache__
